tests/baselines/reference/templateStringInArrowFunction.errors.txt
templateStringInArrowFunction.ts(1,9): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== templateStringInArrowFunction.ts (1 errors) ====
    var x = x => `abc${ x }def`;
            ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.